force-app/main/default/staticresources/python/Disappear/src/objects/AppLog__c.object
<CustomObject>
    <fields>
        <fullName>CreatedTime__c</fullName>
        <label>CreatedTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LogType__c</fullName>
        <description>Info/Warning/Error</description>
        <inlineHelpText>Info/Warning/Error</inlineHelpText>
        <label>LogType</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageType__c</fullName>
        <label>MessageType</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PubId__c</fullName>
        <description>Pub ID - Name of the publication record</description>
        <label>PubId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Appear Logs</relationshipLabel>
        <relationshipName>Appear_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordName__c</fullName>
        <description>Name of Salesforce Record we are debugging</description>
        <label>RecordName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordURL__c</fullName>
        <description>optional URL to the record we are debugging</description>
        <label>RecordURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>logSubjectId__c</fullName>
        <description>The salesforce id of the primary sObject of this AppLog Record
For example the id of a Publication that this log record is about.</description>
        <label>logSubjectId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Appear Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LogType__c</columns>
        <columns>MessageType__c</columns>
        <columns>Message__c</columns>
        <columns>CreatedTime__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_MRT</fullName>
        <columns>NAME</columns>
        <columns>LogType__c</columns>
        <columns>MessageType__c</columns>
        <columns>Message__c</columns>
        <columns>CreatedTime__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Toddywala</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>3/1/2015 12:00 AM</value>
        </filters>
        <label>Monica Ramchandani-Toddywala</label>
    </listViews>
    <listViews>
        <fullName>All_Swapnil</fullName>
        <columns>NAME</columns>
        <columns>LogType__c</columns>
        <columns>MessageType__c</columns>
        <columns>Message__c</columns>
        <columns>CreatedTime__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Swapnil</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>9/10/2013 12:00 AM</value>
        </filters>
        <label>All Swapnil</label>
    </listViews>
    <listViews>
        <fullName>PubStatusModelShowResendButton</fullName>
        <columns>NAME</columns>
        <columns>LogType__c</columns>
        <columns>PubId__c</columns>
        <columns>MessageType__c</columns>
        <columns>Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MessageType__c</field>
            <operation>contains</operation>
            <value>PubMeModel::recalculateAndPersist</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Message__c</field>
            <operation>contains</operation>
            <value>ME Cycle Num</value>
        </filters>
        <label>PubStatusModel::showResendButton</label>
    </listViews>
    <listViews>
        <fullName>PublicationeUpsert</fullName>
        <columns>NAME</columns>
        <columns>LogType__c</columns>
        <columns>PubId__c</columns>
        <columns>MessageType__c</columns>
        <columns>Message__c</columns>
        <columns>RecordURL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MessageType__c</field>
            <operation>contains</operation>
            <value>PublicationTriggerLogic::PubBeforeUpsert</value>
        </filters>
        <filters>
            <field>LogType__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>PublicationTriggerLogic::PubBeforeUpsert</label>
    </listViews>
    <listViews>
        <fullName>Sharing_Skips</fullName>
        <columns>NAME</columns>
        <columns>LogType__c</columns>
        <columns>MessageType__c</columns>
        <columns>Message__c</columns>
        <columns>RecordURL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CreatedTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>MessageType__c</field>
            <operation>equals</operation>
            <value>AppearPubModelShare::pubTeamShareEdit</value>
        </filters>
        <label>Sharing Skips</label>
    </listViews>
    <listViews>
        <fullName>Today_s_error</fullName>
        <columns>NAME</columns>
        <columns>LogType__c</columns>
        <columns>MessageType__c</columns>
        <columns>Message__c</columns>
        <columns>RecordURL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CreatedTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LogType__c</field>
            <operation>equals</operation>
            <value>Error</value>
        </filters>
        <label>Today&apos;s error</label>
    </listViews>
    <listViews>
        <fullName>Today_s_log_of_Emails</fullName>
        <columns>NAME</columns>
        <columns>LogType__c</columns>
        <columns>MessageType__c</columns>
        <columns>Message__c</columns>
        <columns>RecordURL__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MessageType__c</field>
            <operation>contains</operation>
            <value>email</value>
        </filters>
        <filters>
            <field>Message__c</field>
            <operation>contains</operation>
            <value>003U000000mB3PSIA0</value>
        </filters>
        <label>Today&apos;s log of Emails</label>
    </listViews>
    <listViews>
        <fullName>UploadAttachment_All</fullName>
        <columns>NAME</columns>
        <columns>LogType__c</columns>
        <columns>Message__c</columns>
        <columns>CreatedTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MessageType__c</field>
            <operation>contains</operation>
            <value>1375857369702</value>
        </filters>
        <label>UploadAttachment All</label>
    </listViews>
    <listViews>
        <fullName>calcPlanningMe</fullName>
        <columns>NAME</columns>
        <columns>LogType__c</columns>
        <columns>Message__c</columns>
        <columns>MessageType__c</columns>
        <columns>PubId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MessageType__c</field>
            <operation>equals</operation>
            <value>PubMeModel::calcPlanningMe</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>calcPlanningMe</label>
    </listViews>
    <nameField>
        <displayFormat>AL-{000000000}</displayFormat>
        <label>AppLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appear Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>